--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     </head>
 
   <body>
-    Hello there, awesome person! 
+      <h1>Introduction to HTML</h1>
+      Hello there, awesome person! 
   </body>
 
 </html>
