--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     </head>
 
   <body>
-      <h1>Introduction to HTML</h1>
+<img src="https://avatars0.githubusercontent.com/u/27527497?v=4">
+
       Hello there, awesome person! 
   </body>
 
