--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     </head>
 
   <body>
-<img src="https://avatars0.githubusercontent.com/u/27527497?v=4">
-
-      Hello there, awesome person! 
+    <img src="https://avatars0.githubusercontent.com/u/27527497?v=4">
+    Hello there, awesome person! 
+    <ul>
+        <li>GitHub</li>
+        <li>Udemy</li>
+        <li>dev.to</li>
+    </ul>
   </body>
 
 </html>
