--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
 
   <body>
-    <img src="https://avatars0.githubusercontent.com/u/27527497?v=4">
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     Hello there, awesome person! 
     <ul>
         <li>GitHub</li>
